@@ -1,28 +1,27 @@
 package JavaAdvanced.OOP.ReflectionAndAnnotations.Ex._4_Barrackswars_TheCommandsStrikeBack.core.factories;
 
 
-import JavaAdvanced.OOP.ReflectionAndAnnotations.Ex._3_Barrackswars_ANewFactory.interfaces.Unit;
-import JavaAdvanced.OOP.ReflectionAndAnnotations.Ex._3_Barrackswars_ANewFactory.interfaces.UnitFactory;
-import jdk.jshell.spi.ExecutionControl;
 
-import java.lang.reflect.Constructor;
+import JavaAdvanced.OOP.ReflectionAndAnnotations.Ex._4_Barrackswars_TheCommandsStrikeBack.interfaces.Unit;
+import JavaAdvanced.OOP.ReflectionAndAnnotations.Ex._4_Barrackswars_TheCommandsStrikeBack.interfaces.UnitFactory;
+
 import java.lang.reflect.InvocationTargetException;
 
 public class UnitFactoryImpl implements UnitFactory {
 
-	private static final String UNITS_PACKAGE_NAME =
-			"JavaAdvanced.OOP.ReflectionAndAnnotations.Ex._3_Barrackswars_ANewFactory.models.units.";
+	private static final String UNITS_PACKAGE =
+			"JavaAdvanced.OOP.ReflectionAndAnnotations.Ex._4_Barrackswars_TheCommandsStrikeBack.models.units.";
+
 
 	@Override
-	public Unit createUnit(String unitType) throws ExecutionControl.NotImplementedException {
-		try{
-			Class unitClass = Class.forName(UNITS_PACKAGE_NAME + unitType);
-			Constructor<Unit> constructor = unitClass.getDeclaredConstructor();
-			return constructor.newInstance();
-		}
-		catch (ClassNotFoundException | NoSuchMethodException | InvocationTargetException | InstantiationException | IllegalAccessException e) {
+	public Unit createUnit(String unitType) {
+		try {
+			Class<?> clas = Class.forName(UNITS_PACKAGE + unitType);
+			Unit unit = clas.getDeclaredConstructor().newInstance();
+		} catch (ClassNotFoundException | NoSuchMethodException | InvocationTargetException | InstantiationException | IllegalAccessException e) {
 			System.out.println(e.getMessage());
 		}
+		
 		return null;
 	}
 }
